Agregando un poco más de texto al título

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
 		<div class="Principal">
 			
 		
-			<h2 class="titulo-centrado">Sobre la Barbería Alura</h2>
+			<h2 class="titulo-centrado">Sobre la Barbería Alura, hacia dónde pretendemos llegar, la respuesta a ello sería "El cielo es el límite"</h2>
 
 			<p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.</p>
 
